fixing stretched picture on chrome

--- a/css/datcabin.css
+++ b/css/datcabin.css
@@ -115,7 +115,6 @@
     }
 
     .slick-slide img {
-      width: 100%;
       max-height:300px;
     }
 
